Dark mode fixes

--- a/src/assets/scss/_darkModeVariables.scss
+++ b/src/assets/scss/_darkModeVariables.scss
@@ -15,6 +15,7 @@ $c-mediumbg: #373847;
 $c-lightbg: #4a4b5f;
 $c-headerbg: #373847;
 $c-footerbg: #373847;
+$c-priobg: #373847;
 $c-navFooterTxt: #fff;
 $c-headerTxt: #fff;
 $c-hover: #fff;
