--- a/src/assets/scss/_lightModeVariables.scss
+++ b/src/assets/scss/_lightModeVariables.scss
@@ -15,6 +15,7 @@ $c-mediumbg: #cfdeee;
 $c-lightbg: #d5e0eb;
 $c-headerbg: #373847;
 $c-footerbg: #373847;
+$c-priobg: #fff;
 $c-navFooterTxt: #fff;
 $c-headerTxt: #00509E;
 $c-hover: #000;
